Fixed wrapping bug on firefox

--- a/style.scss
+++ b/style.scss
@@ -48,6 +48,7 @@ p{
 
 .markdowned{
   font-size: 1.2em;
+  max-width: 100%;
 }
 
 .flexRowDistribute{
